--- a/index.html
+++ b/index.html
@@ -5,13 +5,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
-    <script src="js/main.js"></script>
+    <script src="backend/javascript/main.js"></script>
     <title>Website</title>
 </head>
 <body>
 
-<h1 class="main-title">CronoCare</h1>
-
+<div>
+    <h1 class="main-title">Welkom bij Cronocare</h1>
+    <img class="logo" src="images/logo.png" alt="logo">
+    <a href="settings.php"><img class="settingKnop" src="images/settings.png" alt="afbeelding van instelling knop"></a>
+</div>
 <h2 class=""></h2>
 <!-- Buttons to trigger the displayHeroDetails function for each hero -->
 <div id="" class="">
