--- a/index.html
+++ b/index.html
@@ -5,13 +5,48 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
-    <script src="js/main.js"></script>
+    <script src="backend/js/main.js"></script>
     <title>Website</title>
 </head>
 <body>
+<!-- Navbar -->
+<nav>
+    <div class="navbar-l">
+        <img src="" alt="">
+        <button><a href="#">Informatie</a></button>
+        <button><a href="#">Route</a></button>
+        <button><a href="#">Parkeren</a></button>
+        <button><a href="#">Berichten</a></button>
+    </div>
+    <div class="navbar-r">
+        <button><a href="#">Inlog</a></button>
+        <img class="profile" src="css/img/veryimportan.jpg">
+    </div>
+</nav>
+<h1 class="main-title">Informatie</h1>
+<section>
+    <div class="border">
+        Lorem Ipsum is simply dummy text of the printing and typesetting industry
+        . Lorem Ipsum has been the industry's standard dummy text ever since the 1500s
+        , when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+        It has survived not only five centuries, but also the leap into electronic typesetting,
+        remain
 
-<h1 class="main-title">CronoCare</h1>
+    </div>
 
+    <div class="pic">
+        <img class="" src="css/img/veryimportan.jpg">
+    </div>
+
+</section>
+<section class="info">
+    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
+    the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type
+    and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap
+    into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release
+    of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software
+    like Aldus PageMaker including versions of Lorem Ipsum.
+</section>
 <h2 class=""></h2>
 <!-- Buttons to trigger the displayHeroDetails function for each hero -->
 <div id="" class="">
