--- a/index.html
+++ b/index.html
@@ -1,22 +1,27 @@
-
 <!DOCTYPE html>
 <html lang="en" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
-    <script src="js/main.js"></script>
+    <script src="backend/js/main.js"></script>
     <title>Website</title>
 </head>
 <body>
 
-<h1 class="main-title">CronoCare</h1>
-
-<h2 class=""></h2>
-<!-- Buttons to trigger the displayHeroDetails function for each hero -->
-<div id="" class="">
-
+<div>
+    <h1 class="main-title">Welkom</h1>
+    <img class="logo" src="images/logo.png" alt="logo">
+    <a href="settings.php"><img class="settingKnop" src="images/settings.png" alt="afbeelding van instelling knop"></a>
 </div>
+<!-- Buttons to trigger the displayHeroDetails function for each hero -->
+<h2 class="">zorginstellingen</h2>
+<select id="mySelect">
+    <option value="" selected disabled>Kies een zorginstelling</option>
+    <option value="1">Pagina 1</option>
+    <option value="2">Pagina 2</option>
+    <option value="3">Pagina 3</option>
+</select>
 
 </body>
 
