registratie 100% Login(Woek in Progress) Setting(???)

--- a/info.html
+++ b/info.html
@@ -18,7 +18,7 @@
         <button><a href="#">Berichten</a></button>
     </div>
     <div class="navbar-r">
-        <button><a href="#">Inlog</a></button>
+        <button><a href="php/login.php">Inlog</a></button>
         <img class="profile" src="css/img/veryimportan.jpg">
     </div>
 </nav>
@@ -26,6 +26,9 @@
 
 <section>
     <div class="border" id="info1">
+        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
+        the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type
+        specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remain
     </div>
 
     <div class="pic">
@@ -34,6 +37,10 @@
 </section>
 
 <section class="info" id="info2">
+    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy
+    text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen
+    book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop
+    publishing software like Aldus PageMaker including versions of Lorem Ipsum.
 </section>
 <h2 class=""></h2>
 <!-- Buttons to trigger the displayHeroDetails function for each hero -->
