backend index.php, info.html af

--- a/park.html
+++ b/park.html
@@ -21,23 +21,19 @@
         <button><a href="index.php"><-</a></button>
     </div>
 </nav>
-<h1 id="title" class="main-title"></h1>
+<h1 class="main-title">Informatie</h1>
 
 <section>
     <div class="border" id="info1">
     </div>
     <div class="pic">
-        <img id="infoImage" class="">
+
     </div>
 </section>
 
 <section class="info" id="info2">
-</section>
-<h2 class=""></h2>
-<!-- Buttons to trigger the displayHeroDetails function for each hero -->
-<div id="" class="">
 
-</div>
+</section>
 
 </body>
 </html>
