Alle back-end afgerond.

--- a/route.html
+++ b/route.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
-    <script src="backend/js/park.js"></script>
+    <script src="backend/js/route.js"></script>
     <title>Website</title>
 </head>
 <body>
@@ -21,18 +21,12 @@
         <button><a href="index.php"><-</a></button>
     </div>
 </nav>
-<h1 class="main-title">Parkeren</h1>
+<h1 class="main-title">Route</h1>
 
 <section>
-    <div class="parkView">
-    </div>
-        <img id="parkImage" class="">
-    <div>
-        <div>
-            invalide is blauw
-        </div>
-        <div class="border" id="park1">
-        </div>
+    <div class="route">
+        <img id="routeImage" class="">
+        <button><a href="#">Kies route</a></button>
     </div>
 </section>
 
