--- a/info.html
+++ b/info.html
@@ -9,16 +9,19 @@
 </head>
 <body>
 <!-- Navbar -->
+
 <nav>
+    <img src="" alt="">        <img  class="logo" src="css/img/logo.png">
+
     <div class="navbar-l">
         <img src="" alt="">
         <button><a href="info.html">Informatie</a></button>
         <button><a href="route.html">Route</a></button>
         <button><a href="park.html">Parkeren</a></button>
-        <button><a href="view.html">Plattegrond</a></button>
+        <button><a href="#">Berichten</a></button>
     </div>
     <div class="navbar-r">
-        <button><a href="index.php"><-</a></button>
+        <button><a href="index.php">Home</a></button>
     </div>
 </nav>
 <h1 id="title" class="main-title"></h1>
