--- a/route.html
+++ b/route.html
@@ -4,26 +4,31 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
-    <script src="backend/js/main.js"></script>
+    <script src="backend/js/route.js"></script>
     <title>Website</title>
 </head>
 <body>
 <!-- Navbar -->
 <nav>
-    <img src="" alt="">        <img  class="logo" src="css/img/logo.png">
-
     <div class="navbar-l">
-
+        <img src="" alt="">
         <button><a href="info.html">Informatie</a></button>
         <button><a href="route.html">Route</a></button>
         <button><a href="park.html">Parkeren</a></button>
-        <button><a href="#">Berichten</a></button>
+        <button><a href="view.html">Plattegrond</a></button>
     </div>
     <div class="navbar-r">
-        <button><a href="index.php">Home</a></button>
+        <button><a href="index.php"><-</a></button>
     </div>
 </nav>
+<h1 class="main-title">Route</h1>
 
-
+<section>
+    <div class="route">
+        <img id="routeImage" class="">
+        <button><a href="#">Kies route</a></button>
+    </div>
+</section>
 
 </body>
+</html>
