--- a/view.html
+++ b/view.html
@@ -10,8 +10,6 @@
 <body>
 <!-- Navbar -->
 <nav>
-    <img src="" alt="">        <img  class="logo" src="css/img/logo.png">
-
     <div class="navbar-l">
         <img src="" alt="">
         <button><a href="info.html">Informatie</a></button>
@@ -20,7 +18,7 @@
         <button><a href="view.html">Plattegrond</a></button>
     </div>
     <div class="navbar-r">
-        <button><a href="index.php">Home</a></button>
+        <button><a href="index.php"><-</a></button>
     </div>
 </nav>
 <h1 class="main-title">Plattegrond</h1>
