--- a/info.html
+++ b/info.html
@@ -14,11 +14,10 @@
     <img src="" alt="">        <img  class="logo" src="css/img/logo.png">
 
     <div class="navbar-l">
-        <img src="" alt="">
         <button><a href="info.html">Informatie</a></button>
         <button><a href="route.html">Route</a></button>
         <button><a href="park.html">Parkeren</a></button>
-        <button><a href="#">Berichten</a></button>
+        <button><a href="view.html">Plattegrond</a></button>
     </div>
     <div class="navbar-r">
         <button><a href="index.php">Home</a></button>
