css parkeer pagina

--- a/park.html
+++ b/park.html
@@ -27,12 +27,12 @@
 <section>
     <div class="parkView">
     </div>
-        <img id="parkImage" class="">
+        <img id="parkImage" class="parkImage">
     <div>
-        <div>
+        <div class="randomText">
             invalide is blauw
         </div>
-        <div class="border" id="park1">
+        <div class="parkText" id="park1">
         </div>
     </div>
 </section>
