--- a/php/settings.html
+++ b/php/settings.html
@@ -27,6 +27,19 @@ if ($_SERVER["REQUEST_METHOD"] == "POST") {
         <title>Instellingen</title>
     </head>
     <body>
+    <nav>
+        <img src="" alt="">        <img  class="logo" src="css/img/logo.png">
+        <div class="navbar-l">
+            <img src="" alt="">
+            <button><a href="info.html">Informatie</a></button>
+            <button><a href="route.html">Route</a></button>
+            <button><a href="park.html">Parkeren</a></button>
+            <button><a href="view.html">Plattegrond</a></button>
+        </div>
+        <div class="navbar-r">
+            <button><a href="index.php">Home</a></button>
+        </div>
+    </nav>
   <section class="optie">
       <h1>Instellingen</h1>
     <form method="post" action="<?php echo htmlspecialchars($_SERVER["PHP_SELF"]); ?>">
