--- a/park.html
+++ b/park.html
@@ -8,19 +8,18 @@
     <title>Website</title>
 </head>
 <body>
-<!-- Navbar -->
-<nav>
-    <img src="" alt="">        <img  class="logo" src="css/img/logo.png">
+<!-- Navbar --><nav>
+<img src="" alt="">        <img  class="logo" src="css/img/logo.png">
 
-    <div class="navbar-l">
-        <button><a href="info.html">Informatie</a></button>
-        <button><a href="route.html">Route</a></button>
-        <button><a href="park.html">Parkeren</a></button>
-        <button><a href="view.html">Plattegrond</a></button>
-    </div>
-    <div class="navbar-r">
-        <button><a href="index.php">Home</a></button>
-    </div>
+<div class="navbar-l">
+    <button><a href="info.html">Informatie</a></button>
+    <button><a href="route.html">Route</a></button>
+    <button><a href="park.html">Parkeren</a></button>
+    <button><a href="view.html">Plattegrond</a></button>
+</div>
+<div class="navbar-r">
+    <button><a href="index.php">Home</a></button>
+</div>
 </nav>
 <h1 class="main-title">Parkeren</h1>
 
