--- a/view.html
+++ b/view.html
@@ -19,7 +19,7 @@
         <button><a href="view.html">Plattegrond</a></button>
     </div>
     <div class="navbar-r">
-        <button><a href="index.php">Home</a></button>
+        <button><a href="index.html">Home</a></button>
     </div>
 </nav>
 <h1 class="main-title">Plattegrond</h1>
