--- a/info.html
+++ b/info.html
@@ -20,7 +20,7 @@
         <button><a href="view.html">Plattegrond</a></button>
     </div>
     <div class="navbar-r">
-        <button><a href="index.php">Home</a></button>
+        <button><a href="index.html">Home</a></button>
     </div>
 </nav>
 <h1 id="title" class="main-title"></h1>
