--- a/park.html
+++ b/park.html
@@ -18,7 +18,7 @@
     <button><a href="view.html">Plattegrond</a></button>
 </div>
 <div class="navbar-r">
-    <button><a href="index.php">Home</a></button>
+    <button><a href="index.html">Home</a></button>
 </div>
 </nav>
 <h1 class="main-title">Parkeren</h1>
